--- a/style.css
+++ b/style.css
@@ -1,19 +1,17 @@
-html {
-  font-family: Arial;
+body {
+  font-family: Arial, sans-serif;
   font-size: 13px;
 }
 
 h1 {
   font-size: 17px;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 h2 {
-  font-weight: normal;
   font-size: 15px;
-  margin-top: 1em;
-  margin-right: 0;
+  font-weight: normal;
+  margin: 1em 0;
 }
 
 a {
